@@ -1,0 +1,18 @@
+[Data],,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+Lane,Sample_ID,Sample_Name,GenomeFolder,Index,Index2,bait_name,default_library_type,default_tag_sequence,default_tagtwo_sequence,email_addresses,email_addresses_of_followers,email_addresses_of_managers,email_addresses_of_owners,gbs_plex_name,is_control,is_pool,lane_id,lane_priority,library_name,organism,organism_taxon_id,project_cost_code,project_id,project_name,purpose,qc_state,request_id,required_insert_size_range,sample_accession_number,sample_cohort,sample_common_name,sample_consent_withdrawn,sample_control_type,sample_description,sample_donor_id,sample_id,sample_is_control,sample_name,sample_public_name,sample_reference_genome,sample_supplier_name,spiked_phix_tag_index,study_accession_number,study_alignments_in_bam,study_contains_nonconsented_human,study_contains_nonconsented_xahuman,study_description,study_id,study_name,study_reference_genome,study_separate_y_chromosome_data,study_title,tag_index,
+1,25660286,Xxxx8852872,,CGGAGACA,ATGCGACT,,PCR amplicon ligated adapters 384,CGGAGACA,ATGCGACT,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660286,,,S10068,,,standard,,,from:50 to:800,,,,0,,,Xxxx8852872,4521031,0,Xxxx8852872,,,ZZZZ-D9000,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,1,
+1,25660310,Xxxx8898616,,CCGTTAGT,ATCACGAT,,PCR amplicon ligated adapters 384,CCGTTAGT,ATCACGAT,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660310,,,S10068,,,standard,,,from:50 to:800,,,,0,,,Xxxx8898616,4522590,0,Xxxx8898616,,,YYYY-130D5A,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,2,
+1,25660334,Xxxx8852873,,GTTAACGT,TCACAAAC,,PCR amplicon ligated adapters 384,GTTAACGT,TCACAAAC,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660334,,,S10068,,,standard,,,from:50 to:800,,,,0,,,Xxxx8852873,4521032,0,Xxxx8852873,,,ZZZZ-D901F,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,3,
+1,25660358,Xxxx8898617,,TCGACTCG,TGATCAAA,,PCR amplicon ligated adapters 384,TCGACTCG,TGATCAAA,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660358,,,S10068,,,standard,,,from:50 to:800,,,,0,,,Xxxx8898617,4522591,0,Xxxx8898617,,,YYYY-130D69,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,4,
+1,25660382,Xxxx8852874,,CATTTATT,AGGAGAAA,,PCR amplicon ligated adapters 384,CATTTATT,AGGAGAAA,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660382,,,S10068,,,standard,,,from:50 to:800,,,,0,,,Xxxx8852874,4521033,0,Xxxx8852874,,,ZZZZ-D902E,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,5,
+1,25660406,Xxxx8898618,,CGTAAAGA,CGACTTCC,,PCR amplicon ligated adapters 384,CGTAAAGA,CGACTTCC,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660406,,,S10068,,,standard,,,from:50 to:800,,,,0,,,Xxxx8898618,4522592,0,Xxxx8898618,,,YYYY-130D78,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,6,
+1,25660430,Xxxx8852875,,TTAGCGCA,TCGGCAAA,,PCR amplicon ligated adapters 384,TTAGCGCA,TCGGCAAA,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660430,,,S10068,,,standard,,,from:50 to:800,,,,0,,,Xxxx8852875,4521034,0,Xxxx8852875,,,ZZZZ-D903D,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,7,
+1,25660454,Xxxx8898619,,CGTCGTCG,CTCAGAAA,,PCR amplicon ligated adapters 384,CGTCGTCG,CTCAGAAA,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660454,,,S10068,,,standard,,,from:50 to:800,,,,0,,,Xxxx8898619,4522593,0,Xxxx8898619,,,YYYY-130D87,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,8,
+1,25660363,Xxxx9101746,,TCCTATCT,TCCGACTT,,PCR amplicon ligated adapters 384,TCCTATCT,TCCGACTT,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660363,,,S10068,,,standard,,,from:50 to:800,,,,0,positive,,,4682817,1,Xxxx9101746,,,Positive control%3A MN908947.3,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,84,
+1,25660468,Xxxx8898675,,TCGTAAAC,GCCCTCTG,,PCR amplicon ligated adapters 384,TCGTAAAC,GCCCTCTG,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660468,,,S10068,,,standard,,,from:50 to:800,,,,0,positive,,Xxxx8898675,4522649,1,Xxxx8898675,,,Positive control,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,194,
+1,25660355,Xxxx9116215,,CATCGGAA,GGCGAGGA,,PCR amplicon ligated adapters 384,CATCGGAA,GGCGAGGA,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660355,,,S10068,,,standard,,,from:50 to:800,,,,0,positive,,,4697113,1,Xxxx9116215,,,Positive control%3A MN908947.3,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,249,
+1,25660596,Xxxx8852966,,CGGGAGTG,ACCGTCGT,,PCR amplicon ligated adapters 384,CGGGAGTG,ACCGTCGT,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660596,,,S10068,,,standard,,,from:50 to:800,,,,0,positive,,Xxxx8852966,4521125,1,Xxxx8852966,,,Positive control,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,256,
+1,25660481,Xxxx9116246,,AGCGACCA,TCCTCTAA,,PCR amplicon ligated adapters 384,AGCGACCA,TCCTCTAA,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660481,,,S10068,,,standard,,,from:50 to:800,,,,0,negative,,,4697144,1,Xxxx9116246,,,Negative control,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,57,
+1,25660315,Xxxx9101745,,ACGCCGGG,GATGCCGG,,PCR amplicon ligated adapters 384,ACGCCGGG,GATGCCGG,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660315,,,S10068,,,standard,,,from:50 to:800,,,,0,negative,,,4682816,1,Xxxx9101745,,,Negative control,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,82,
+1,25660516,Xxxx8898676,,GCCGCCTG,TCTACTTT,,PCR amplicon ligated adapters 384,GCCGCCTG,TCTACTTT,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660516,,,S10068,,,standard,,,from:50 to:800,,,,0,negative,,Xxxx8898676,4522650,0,Xxxx8898676,,,Negative control,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,196,
+1,25660644,Xxxx8852967,,GGTGATGT,ATCACCCA,,PCR amplicon ligated adapters 384,GGTGATGT,ATCACCCA,p4@dot.com p1@dot.com p2@dot.com p3@dot.com,p4@dot.com p1@dot.com p2@dot.com,p3@dot.com,p3@dot.com,nCoV-2019%2FV3%2FB,0,0,30353297,0,25660644,,,S10068,,,standard,,,from:50 to:800,,,,0,,,Xxxx8852967,4521126,1,Xxxx8852967,,,Negative control,,,1,0,0,TBD,6187,Xxxx Project,SARS-CoV-2 (MN908947.3),0,Xxxx Project,257,
